--- a/css/styles.css
+++ b/css/styles.css
@@ -34,17 +34,25 @@ body{
   }
   
 
-
-  .address-link {
-    color: #435548; 
+  .address-link a {
+    color: #435548;  
     text-decoration: none; 
     font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.02em;  
-   
-}
+  }
+  
+  .address-link a:hover,
+  .address-link a:focus {
+    color: #404bbf;  
+  }
+  
+.business{
+  background-color:#2e2f42 ;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff 
 
-.address-link :hover,
-.address-link :focus {
-    color: #404bbf; 
 }
