--- a/css/styles.css
+++ b/css/styles.css
@@ -54,5 +54,23 @@ body{
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff 
+}
 
+.button{
+  background-color: #4D5AE5;
+  font-family: "Roboto", sans-serif ;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  border: none;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #404BBF; 
+  color: #ffffff; 
+  outline: none; 
+  cursor: pointer;
 }
