Добавлена папка css с файлами стилей

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,17 @@ body{
   
   .business {
     background-color: #2e2f42;
+    font-size: 56px;
+    line-height: 1.07;
     text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
   }
   
   .main-title {
     font-size: 56px;
     line-height: 1.07;
+    text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
   }
