--- a/css/styles.css
+++ b/css/styles.css
@@ -85,26 +85,16 @@ body{
   cursor: pointer;
 }
 
-.team-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+.team-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color:#2e2f42;
 }
 
-.team-member-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-
-.team-member-description {
-  font-weight: 400;
-  font-size: 16px;
+.team-decription{
   line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+  font-size: 16px;
+  letter-spacing: 0.02em ;
 }
