Добавлена папка css с файлами стилей

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ body{
   color: #f4f4fd;
 }
 
-.final-decription{
+.final-description{
   line-height: 1.5;
   color:#F4F4FD;
   letter-spacing: 0.02em;
