--- a/css/styles.css
+++ b/css/styles.css
@@ -85,12 +85,23 @@ body{
   cursor: pointer;
 }
 
-.team-title{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color:#2e2f42;
+
+
+
+.team{
+  background-color: #F4F4FD ;
+
+}
+
+
+.team-name{
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center ;
+  letter-spacing: 0.02em ;
+  text-transform: capitalize ;
+  color:#2e2f42;
+
 }
 
 .team-decription{
@@ -98,6 +109,26 @@ body{
   font-size: 16px;
   letter-spacing: 0.02em ;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .portfolio-title{
   font-size: 36px;
@@ -120,27 +151,9 @@ body{
 .portfolio-decription{
   line-height: 1.5;
   letter-spacing: 0.02em;
-  
+
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
