--- a/css/styles.css
+++ b/css/styles.css
@@ -90,10 +90,11 @@ body{
 
 .team{
   background-color: #F4F4FD ;
-
 }
 
-
+.team-item {
+  background-color: #ffffff;
+}
 .team-name{
   font-size: 36px;
   line-height: 1.11;
@@ -104,12 +105,12 @@ body{
 
 }
 
-.team-decription{
+.team-description {
   line-height: 1.5;
   font-size: 16px;
-  letter-spacing: 0.02em ;
+  letter-spacing: 0.02em;
+  text-align: center;
 }
-
 
 
 
