--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,9 @@ body{
   letter-spacing: 0.02em ;
   text-transform: capitalize ;
   color:#2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 
 }
 
