--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,8 @@ body{
 
 
   
-  .address-link :hover,
-  .address-link :focus {
+  .address-link a:hover,
+  .address-link a:focus {
     color: #404bbf;  
   }
 
