--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,20 @@ body{
 
 
 
+.features-title{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  
+}
+
+.features-decription{
+  line-height: 1.5 ;
+  letter-spacing: 0.02em;
+   color:#434455 ;
+}
 
 
 
