--- a/css/styles.css
+++ b/css/styles.css
@@ -121,22 +121,28 @@ body{
 }
 
 
-
-.features-title{
+.features-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  
 }
 
-.features-decription{
-  line-height: 1.5 ;
+.features-item-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-   color:#434455 ;
+  color: #2e2f42;
 }
 
+.features-decription {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 
 
 
