--- a/css/styles.css
+++ b/css/styles.css
@@ -93,34 +93,6 @@ body{
 
 
 
-.team{
-  background-color: #F4F4FD ;
-}
-
-.team-item {
-  background-color: #ffffff;
-}
-.team-name{
-  font-size: 36px;
-  line-height: 1.11;
-  text-align: center ;
-  letter-spacing: 0.02em ;
-  text-transform: capitalize ;
-  color:#2e2f42;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-
-}
-
-.team-description {
-  line-height: 1.5;
-  font-size: 16px;
-  letter-spacing: 0.02em;
-  text-align: center;
-}
-
-
 .features-title {
   font-weight: 500;
   font-size: 20px;
@@ -145,6 +117,43 @@ body{
 }
 
 
+.team{
+  background-color: #F4F4FD ;
+}
+
+.team-title{
+  font-size: 36px ;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em ;
+  text-transform: capitalize ;
+  color:#2e2f42 ;
+}
+
+
+
+.team-item {
+  background-color: #ffffff;
+}
+.team-name{
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center ;
+  letter-spacing: 0.02em ;
+  text-transform: capitalize ;
+  color:#2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+
+}
+
+.team-description {
+  line-height: 1.5;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
 
 
 
