--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,8 @@ body{
 }
 
 
+
+
 .team{
   background-color: #F4F4FD ;
 }
@@ -153,6 +155,7 @@ body{
   font-size: 16px;
   letter-spacing: 0.02em;
   text-align: center;
+  color:#434455;
 }
 
 
