Добавлены картинки и обновлены стили

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,14 @@ body{
     font-family:'Roboto', sans-serif;
     color:#434455;
     background-color:#FFFFFF;
+}
 
+ul, ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 .logo-text {
@@ -13,10 +20,12 @@ body{
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+
 }
 
 .logo-span {
   color: #2e2f42;
+  
 }
 
 
